--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     name: deploy
     runs-on: ubuntu-18.04
+    if: false # Disabling this given that we are doing deployments with Cloudflare pages now
     steps:
       - uses: actions/checkout@v1 # necessary to fetch all files from repo, including actions
       - uses: ./.github/actions/build-dist-site
